apps/cluster-based/kapp/03-ytt/05-grafana/grafana.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:base64", "base64")
---
#@ if data.values.grafana.deploy:
#@ if not data.values.prometheus.deploy:
apiVersion: v1
kind: Namespace
metadata:
  name: tanzu-system-monitoring
#@ end
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app: grafana
  name: grafana-httpproxy
  namespace: tanzu-system-monitoring
spec:
  routes:
  - conditions:
    - prefix: /
    pathRewritePolicy:
      replacePrefix:
      - prefix: /
        replacement: /
    services:
    - name: grafana
      port: 80
  virtualhost:
    fqdn: #@ "grafana." + data.values.shared.ingress
